2011-01-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* Not tagged.
	* Change SQL query to retrieve Clobs from tmp_string_table
		according to the new PLSQL "load_parameter_values" (test).
	
2012-01-11 Martin Grunewald <Martin.Grunewald@cern.ch>
	* tag V01-06-00
	* export untracked parameters regardless of whether they
	  are set at their default value or not (defaults are ill-
	  defined: cfi default vs C++ default wrt to changes of
	  cfi/C++ defaults not re-parsed into ConfDB)

2011-12-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-90
	* Table definitions and configuration load process have changed 
	  allowing long string parameter values. CLOBs fields.(bug 75950).
	  - tables: INPUTTAGPARAMVALUES, VSTRINGPARAMVALUES, STRINGPARAMVALUES,
	  			TMP_STRING_TABLE.
	  - procedure: load_parameter_value.
	  NOTE: Changes will be applied to HLT_Development in January 2012.
	* Check the database structure when connecting to perform the load process
	  depending on the database features.
	* Add menu option "database info" and info panel to show database
	  additional information and features. (eg. documentation fields).
	   
2011-12-02 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-89
	* Add R/O prescale table for the corresponding path in the rightUpper panel 
	  (Documentation fields panel). (bug 89524).
	* Fix autosave documentation fields behaviour.
	   
2011-12-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-88
	* Table definitions and configuration load process have changed 
	  allowing up to 2048 characters parameter values.(bug 75950).
	  NOTE: Changes will be applied to HLT_Development in the next technical stop.
	  
2011-11-30 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-87
	* Documentation fields autosave when clicking the tree. (bug 75959).
	
2011-11-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-86